Un seul bloc pour Markdown et EcoFoG

--- a/.github/workflows/rmarkdown.yml
+++ b/.github/workflows/rmarkdown.yml
@@ -15,16 +15,13 @@ jobs:
         uses: r-lib/actions/setup-r@v1
       - name: Install pandoc
         uses: r-lib/actions/setup-pandoc@v1
-      - name: Install R Markdown
+      - name: Install R Markdown and EcoFoG
         run: |
           options(pkgType = "binary")
           options(install.packages.check.source = "no")
           install.packages(c("remotes", "bookdown", "formatR", "tinytex"))
           tinytex::install_tinytex()
-        shell: Rscript {0}
-      - name: Install package EcoFoG
-        run: |
-          Rscript -e 'remotes::install_github("EcoFoG/EcoFoG")'
+          remotes::install_github("EcoFoG/EcoFoG")
       - name: Install dependencies
         run: remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
