--- a/.github/workflows/rmarkdown.yml
+++ b/.github/workflows/rmarkdown.yml
@@ -15,15 +15,14 @@ jobs:
         uses: r-lib/actions/setup-r@v1
       - name: Install pandoc
         uses: r-lib/actions/setup-pandoc@v1
-      - name: Install R Markdown and EcoFoG
+      - name: Install dependencies
         run: |
           options(pkgType = "binary")
           options(install.packages.check.source = "no")
           install.packages(c("remotes", "bookdown", "formatR", "tinytex"))
           tinytex::install_tinytex()
           remotes::install_github("EcoFoG/EcoFoG")
-      - name: Install dependencies
-        run: remotes::install_deps(dependencies = TRUE)
+          remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
       - name: Render Rmarkdown files
         run: |
